# Alfrodull

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
ifile/: alf_only_iso_Tint0K.thr  alf_only_iso_Tint1000K.thr  alf_only_iso_Tint2000K.thr  alf_only_iso_Tint500K.thr  alf_spinup_iso_Tint0K.thr  alf_spinup_iso_Tint1000K.thr  alf_spinup_iso_Tint2000K.thr  alf_spinup_iso_Tint500K.thr  alf_spinup_iso_g4_l80.thr  alf_spinup_iso_g5_r50.thr  alf_spinup_iso_g6.thr  alf_spinup_iso_g6_r50.thr  alf_spinup_noniso_g5_r50.thr  alf_spinup_noniso_g6_r50.thr  alf_spinup_rt.thr  alf_spinup_rt_clouds.thr  alf_w_rt500.thr  alf_w_rt500_clouds.thr  alf_w_rt500_clouds_f0p1.thr  alf_w_rt500_clouds_f0p5.thr  alf_w_rt500_noi2s.thr  alf_w_rt500_noscatcorr.thr  alf_wasp_spectrum_bb.thr  alf_wasp_spectrum_noniso_bb.thr  alf_wasp_spectrum_noniso_real.thr  alf_wasp_spectrum_real.thr
input/: cloud_sample_r5.h5  stellar_spectrum.h5  stellar_spectrum_wasp43.h5  stellar_spectrum_wasp43_r5.h5  stellar_spectrum_wasp43_r50.h5  stellar_spectrum_wasp43_r500.h5
pycpptest/: pycudacpptest.py  summy.cu  summy.h
pylfrodull/src/: pylfrodull.cpp
pylfrodull/src/inc/: pylfrodull.h
src/: alfrodull_engine.cu  alfrodullib.cu  planck_table.cu  two_streams_radiative_transfer.cu
src/inc/: alfrodull_engine.h  alfrodullib.h  atomic_add.h  calculate_physics.h  cloud_opacities.h  correct_surface_emission.h  definitions.h  gauss_legendre_weights.h  integrate_flux.h  interpolate_values.h  math_helpers.h  opacities.h  opacities_helpers.h  physics_constants.h  physics_constants_si.h  planck_table.h  surface_planck.h  two_streams_radiative_transfer.h
src/kernels/: atomic_add.cu  calculate_physics.cu  correct_surface_emission.cu  integrate_flux.cu  interpolate_values.cu  math_helpers.cu  surface_planck.cu
src/opacities/: cloud_opacities.cu  opacities.cu
tests/integrate_flux/: flux_int_test.cu  two_streams_solve_test.cu
thor_module/inc/: insolation_angle.h  two_streams_radiative_transfer.h
thor_module/src/: insolation_angle.cu  phy_modules.cu  two_streams_radiative_transfer.cu
tools/: alfrodull_input_tools.py  create_alf_stellar_spectrum.ipynb  create_cloud_file.ipynb  download_and_prepare_phoenix_spectrum.py  resample_stellar_spectrum.ipynb
tools/devel/: debug_data_plot.ipynb
